// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab and TabBar component render tab control 1`] = `
"<div
  class=\\"mdc-tab-bar\\"
  role=\\"tablist\\"
>
  <div
    class=\\"mdc-tab-scroller\\"
  >
    <div
      class=\\"mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll\\"
      style=\\"margin-bottom: 0px;\\"
    >
      <div
        class=\\"mdc-tab-scroller__scroll-content\\"
      >
        <button
          aria-selected=\\"true\\"
          class=\\"mdc-tab mdc-tab--active\\"
          id=\\"mdc-tab-1\\"
          role=\\"tab\\"
          tabindex=\\"-1\\"
          type=\\"button\\"
        >
          <span
            class=\\"mdc-tab__content\\"
          >
            <span
              class=\\"mdc-tab__text-label\\"
            >
              foo
            </span>
          </span>
          <span
            class=\\"mdc-tab-indicator mdc-tab-indicator--active\\"
          >
            <span
              class=\\"mdc-tab-indicator__content mdc-tab-indicator__content--underline\\"
            />
          </span>
          <span
            class=\\"mdc-tab__ripple\\"
          />
        </button>
        <button
          class=\\"mdc-tab\\"
          id=\\"mdc-tab-2\\"
          role=\\"tab\\"
          tabindex=\\"-1\\"
          type=\\"button\\"
        >
          <span
            class=\\"mdc-tab__content\\"
          >
            <span
              class=\\"mdc-tab__text-label\\"
            >
              bar
            </span>
          </span>
          <span
            class=\\"mdc-tab-indicator\\"
          >
            <span
              class=\\"mdc-tab-indicator__content mdc-tab-indicator__content--underline\\"
            />
          </span>
          <span
            class=\\"mdc-tab__ripple\\"
          />
        </button>
        <button
          class=\\"mdc-tab\\"
          id=\\"mdc-tab-3\\"
          role=\\"tab\\"
          tabindex=\\"-1\\"
          type=\\"button\\"
        >
          <span
            class=\\"mdc-tab__content\\"
          >
            <span
              class=\\"mdc-tab__text-label\\"
            >
              baz
            </span>
          </span>
          <span
            class=\\"mdc-tab-indicator\\"
          >
            <span
              class=\\"mdc-tab-indicator__content mdc-tab-indicator__content--underline\\"
            />
          </span>
          <span
            class=\\"mdc-tab__ripple\\"
          />
        </button>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Tab and TabBar component render tab control 2`] = `
"<div
  class=\\"mdc-tab-bar tab-bar\\"
  role=\\"tablist\\"
>
  <div
    class=\\"mdc-tab-scroller\\"
  >
    <div
      class=\\"mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll\\"
      style=\\"margin-bottom: 0px;\\"
    >
      <div
        class=\\"mdc-tab-scroller__scroll-content\\"
      >
        <button
          class=\\"mdc-tab tab\\"
          id=\\"mdc-tab-4\\"
          role=\\"tab\\"
          tabindex=\\"-1\\"
          type=\\"button\\"
        >
          <span
            class=\\"mdc-tab__content\\"
          >
            <span
              aria-hidden=\\"true\\"
              class=\\"icon mdc-tab__icon\\"
            >
              grade
            </span>
            <span
              class=\\"mdc-tab__text-label\\"
            >
              foo
            </span>
          </span>
          <span
            class=\\"mdc-tab-indicator\\"
          >
            <span
              class=\\"mdc-tab-indicator__content mdc-tab-indicator__content--underline\\"
            />
          </span>
          <span
            class=\\"mdc-tab__ripple\\"
          />
        </button>
        <button
          class=\\"mdc-tab\\"
          id=\\"mdc-tab-5\\"
          role=\\"tab\\"
          tabindex=\\"-1\\"
          type=\\"button\\"
        >
          <span
            class=\\"mdc-tab__content\\"
          >
            <span
              aria-hidden=\\"true\\"
              class=\\"material-icons mdc-tab__icon\\"
            >
              favorite
            </span>
            <span
              class=\\"mdc-tab__text-label\\"
            >
              bar
            </span>
          </span>
          <span
            class=\\"mdc-tab-indicator\\"
          >
            <span
              class=\\"mdc-tab-indicator__content mdc-tab-indicator__content--underline\\"
            />
          </span>
          <span
            class=\\"mdc-tab__ripple\\"
          />
        </button>
        <button
          aria-selected=\\"true\\"
          class=\\"mdc-tab mdc-tab--active tab\\"
          id=\\"mdc-tab-6\\"
          role=\\"tab\\"
          tabindex=\\"-1\\"
          type=\\"button\\"
        >
          <span
            class=\\"mdc-tab__content\\"
          >
            <span
              class=\\"mdc-tab__text-label\\"
            >
              baz
            </span>
          </span>
          <span
            class=\\"mdc-tab-indicator mdc-tab-indicator--active\\"
          >
            <span
              class=\\"mdc-tab-indicator__content mdc-tab-indicator__content--underline\\"
            />
          </span>
          <span
            class=\\"mdc-tab__ripple\\"
          />
        </button>
      </div>
    </div>
  </div>
</div>"
`;
